// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default App - loaded cities 1`] = `
<div
  className="m-3"
>
  <div
    className="mb-5 container"
  >
    <div
      className="m-0 weather-here d-flex align-items-center justify-content-between row"
    >
      <h1>
        Weather Here
      </h1>
      <button
        className="bg-success border-0 btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Update Geolocation
      </button>
      <div
        className="w-25 invisible"
      >
        f
      </div>
    </div>
    <div
      className="weather-block--big d-flex align-items-center justify-content-center"
    >
      <div
        className="preloader"
      />
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="m-0 row"
    >
      <div
        className="p-0 col"
      >
        <h1
          className="pl-0"
        >
          Favorites
        </h1>
      </div>
      <div
        className="p-0 d-flex justify-content-end col"
      >
        <form
          className=" d-flex align-items-center justify-content-end input-form"
          onSubmit={[Function]}
        >
          <div
            className="d-flex m-0 pl-0 flex-column col-md-11"
          >
            <input
              className="input-form__input"
              onChange={[Function]}
              placeholder=" "
              required="required"
              type="text"
            />
            <span
              className="input-form__label"
            >
              Russian city name in English
            </span>
          </div>
          <div
            className="m-0 p-0 justify-content-end"
          >
            <div
              className=" d-flex justify-content-end p-0 m-0"
            >
              <button
                className="circle-button"
                disabled={true}
                onClick={[Function]}
                type="submit"
              >
                +
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      className="m-0 d-flex flex-wrap justify-content-between row"
    >
      <div
        className="weather-block--mini card"
      >
        <div
          className="card-body"
        >
          <div
            className="m-0 d-flex justify-content-between align-items-center row"
          >
            <div
              className="d-flex pl-0 align-items-center col-md-9"
            >
              <p
                className="city-temperature-mini-block__city-name mr-5 mb-0"
              >
                Msk
              </p>
              <span
                className="city-temperature-mini-block__temperature mr-1"
              >
                10
                °C
              </span>
              <img
                alt="icon"
                height="45"
                src="https://openweathermap.org/img/wn/01n.png"
              />
            </div>
            <div
              className="col"
            >
              <div
                className=" d-flex justify-content-end p-0 m-0"
              >
                <button
                  className="circle-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  X
                </button>
              </div>
            </div>
          </div>
          <div
            className="container"
          >
            <div
              className="measure-block-item measure-block-item--blue d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Wind
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                10 m/s
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--red d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Clouds
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                20 %
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--yellow d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Pressure
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                30 hpa
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--green d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Humidity
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                40 %
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--pink d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Coordinates
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                [50, 60]
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="weather-block--mini card"
      >
        <div
          className="card-body"
        >
          <div
            className="m-0 d-flex justify-content-between align-items-center row"
          >
            <div
              className="d-flex pl-0 align-items-center col-md-9"
            >
              <p
                className="city-temperature-mini-block__city-name mr-5 mb-0"
              >
                Msk
              </p>
              <span
                className="city-temperature-mini-block__temperature mr-1"
              >
                10
                °C
              </span>
              <img
                alt="icon"
                height="45"
                src="https://openweathermap.org/img/wn/01n.png"
              />
            </div>
            <div
              className="col"
            >
              <div
                className=" d-flex justify-content-end p-0 m-0"
              >
                <button
                  className="circle-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  X
                </button>
              </div>
            </div>
          </div>
          <div
            className="container"
          >
            <div
              className="measure-block-item measure-block-item--blue d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Wind
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                10 m/s
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--red d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Clouds
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                20 %
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--yellow d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Pressure
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                30 hpa
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--green d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Humidity
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                40 %
              </div>
            </div>
            <div
              className="measure-block-item measure-block-item--pink d-flex mt-md-1 justify-content-between row"
            >
              <div
                className="col"
              >
                Coordinates
              </div>
              <div
                className="d-flex justify-content-end font-weight-light col"
              >
                [50, 60]
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default App - not loaded cities 1`] = `
<div
  className="m-3"
>
  <div
    className="mb-5 container"
  >
    <div
      className="m-0 weather-here d-flex align-items-center justify-content-between row"
    >
      <h1>
        Weather Here
      </h1>
      <button
        className="bg-success border-0 btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Update Geolocation
      </button>
      <div
        className="w-25 invisible"
      >
        f
      </div>
    </div>
    <div
      className="weather-block--big d-flex align-items-center justify-content-center"
    >
      <div
        className="preloader"
      />
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="m-0 row"
    >
      <div
        className="p-0 col"
      >
        <h1
          className="pl-0"
        >
          Favorites
        </h1>
      </div>
      <div
        className="p-0 d-flex justify-content-end col"
      >
        <form
          className=" d-flex align-items-center justify-content-end input-form"
          onSubmit={[Function]}
        >
          <div
            className="d-flex m-0 pl-0 flex-column col-md-11"
          >
            <input
              className="input-form__input"
              onChange={[Function]}
              placeholder=" "
              required="required"
              type="text"
            />
            <span
              className="input-form__label"
            >
              Russian city name in English
            </span>
          </div>
          <div
            className="m-0 p-0 justify-content-end"
          >
            <div
              className=" d-flex justify-content-end p-0 m-0"
            >
              <button
                className="circle-button"
                disabled={true}
                onClick={[Function]}
                type="submit"
              >
                +
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      className="m-0 d-flex flex-wrap justify-content-between row"
    >
      <div
        className="weather-block--mini d-flex align-items-center justify-content-center"
      >
        <div
          className="preloader"
        />
      </div>
      <div
        className="weather-block--mini d-flex align-items-center justify-content-center"
      >
        <div
          className="preloader"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Default App 1`] = `
<div
  className="m-3"
>
  <div
    className="mb-5 container"
  >
    <div
      className="m-0 weather-here d-flex align-items-center justify-content-between row"
    >
      <h1>
        Weather Here
      </h1>
      <button
        className="bg-success border-0 btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Update Geolocation
      </button>
      <div
        className="w-25 invisible"
      >
        f
      </div>
    </div>
    <div
      className="weather-block--big d-flex align-items-center justify-content-center"
    >
      <div
        className="preloader"
      />
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="m-0 row"
    >
      <div
        className="p-0 col"
      >
        <h1
          className="pl-0"
        >
          Favorites
        </h1>
      </div>
      <div
        className="p-0 d-flex justify-content-end col"
      >
        <form
          className=" d-flex align-items-center justify-content-end input-form"
          onSubmit={[Function]}
        >
          <div
            className="d-flex m-0 pl-0 flex-column col-md-11"
          >
            <input
              className="input-form__input"
              onChange={[Function]}
              placeholder=" "
              required="required"
              type="text"
            />
            <span
              className="input-form__label"
            >
              Russian city name in English
            </span>
          </div>
          <div
            className="m-0 p-0 justify-content-end"
          >
            <div
              className=" d-flex justify-content-end p-0 m-0"
            >
              <button
                className="circle-button"
                disabled={true}
                onClick={[Function]}
                type="submit"
              >
                +
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      className="m-0 d-flex flex-wrap justify-content-between row"
    />
  </div>
</div>
`;
